# gaggle-gemini

./: .gitignore  CMakeLists.txt  README.md  meson.build
src/: GeminiException.cpp  GeminiException.h  GeminiRequest.cpp  GeminiRequest.h  Log.h  ResponseObject.h  ResponseParser.cpp  ResponseParser.h  StringUtils.cpp  StringUtils.h  main.cpp
